<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="25dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTituloPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/tituloPrincipal"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnCrearNotas"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:text="@string/crearNotas"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnBuscarNota"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:padding="15dp"
        android:text="@string/buscarNota"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnVerTodasNotas"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:padding="15dp"
        android:text="@string/verNotas"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnListaNotas"
        android:layout_width="208dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:padding="15dp"
        android:text="@string/lista"
        android:textSize="18sp" />

</LinearLayout>