<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="25dp"
    android:orientation="vertical"
    tools:context=".CrearNota">

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/ayudaNombreNota"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etContenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/ayudaContenidoNota"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/etTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/ayudaTipo"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnCrearNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="crearNota"
        android:text="@string/crearNota"
        android:textSize="18sp" />

</LinearLayout>