<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    android:orientation="vertical"
    tools:context=".BuscarNota">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvSeleccionarNota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/seleccionarNota"
                android:text="@string/seleccionarNota"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinnerNotas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:spinnerMode="dialog" />

            <Button
                android:id="@+id/btnMostrarNota"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="verNota"
                android:text="@string/mostrarNota"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:inputType="textPersonName"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etContenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/etTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:inputType="textPersonName"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnEditarNota"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="editarNota"
                android:text="@string/editarNota"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnGuardarNota"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="guardarNota"
                android:text="@string/guardarNota"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnEliminarNota"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="borrarNota"
                android:text="@string/borrarNota"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnCancelarEdicion"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="cancelarEdicion"
                android:text="@string/cancelarOperacion"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>